--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
       content="Neural Print"
     />
     <!-- <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'> -->
-
+    <link href="https://fonts.cdnfonts.com/css/futura-lt-bt" rel="stylesheet">
+    
     <title>Neural Print</title>
   </head>
   <body>
