--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
     />
     <!-- <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'> -->
     <link href="https://fonts.cdnfonts.com/css/futura-lt-bt" rel="stylesheet">
-    
+    <link href="//db.onlinewebfonts.com/c/d5f93e1b825e0f1729dc143050cadf84?family=Semplicita+Pro" rel="stylesheet" type="text/css"/>
+        
     <title>Neural Print</title>
   </head>
   <body>
